[tool.poetry]
name = "project1_shitova_natalia"
version = "0.1.0"
description = "Текстовое приключение 'Лабиринт сокровищ'"
authors = ["Shpinat <dzeshnik@mail.ru>"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "labyrinth_game.main:main"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.14.14,<0.15.0"
